# MyNumber

./: .gitignore  CMakeLists.txt  LICENSE
header/: BaseNumber.h  Complex.h  MyNumber.h  String.h  Vector.h
src/: BaseNumber.cpp  Complex.cpp  MyNumber.cpp  String.cpp  main.cpp
